# autonomousboss.io

./: .gitignore  .scss-lint.yml  LICENSE.md  Makefile  README.md  netlify.toml  package.json  pyproject.toml
config/_default/: config.toml  menus.toml
content/: about.md  resources.md
content/blog/: 5-reasons-people-are-working-for-daos.md
content/networks/avalanche/: _index.md
content/networks/ethereum/: _index.md
content/networks/xdai/: _index.md
scripts/: import-jobs.js  import.js
themes/autonomousboss/: theme.toml
themes/autonomousboss/assets/js/: script.js  search.js
themes/autonomousboss/assets/scss/: _about.scss  _base.scss  _blog.scss  _fonts.scss  _homepage.scss  _organization.scss  _responsive.scss  _utilities.scss  _variables.scss  style.scss
themes/autonomousboss/layouts/: index.html  index.json
themes/autonomousboss/layouts/_default/: baseof.html  list.html  single.html
themes/autonomousboss/layouts/blog/: list.html  single.html
themes/autonomousboss/layouts/networks/: list.html
themes/autonomousboss/layouts/organizations/: list.html
themes/autonomousboss/layouts/partials/: footer.html  head.html  header.html  hero-1.html  nav.html  search.html  submission-modal.html
themes/autonomousboss/layouts/partials/blog/: metadata.html  placard.html
themes/autonomousboss/layouts/partials/jobs/: field_emoji.html  field_icon.html  placard.html
themes/autonomousboss/layouts/partials/orgs/: avatar.html  placard.html
themes/autonomousboss/layouts/standalone/: about.html  resources.html
(+1 files in other folders)
