[tool.poetry]
name = "autonomousboss.io"
version = "0.1.0"
description = ""
authors = ["Autonomous Boss, AC"]

[tool.poetry.dependencies]
python = "^3.8"
notion = {git = "https://github.com/AutonomousBoss/notion-py.git", rev = "master"}
PyYAML = "^5.3.1"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
ipython = "^7.18.1"
ipdb = "^0.13.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
